# ghost-librarian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  demo.tape  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: db.rs  main.rs
src/core/: distill.rs  ingest.rs  mod.rs  provider.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/utils/: mod.rs  text_cleaner.rs
tests/: text_processing.rs
