[package]
name = "ghost-lib"
version = "0.1.0"
edition = "2021"
description = "Ghost Librarian — ultra-lightweight local-LLM RAG engine with Context Distillation"
license = "MIT"
repository = "https://github.com/example/ghost-librarian"

[[bin]]
name = "ghost-lib"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Vector DB
qdrant-client = "1"

# Local embeddings
fastembed = "4"

# Local LLM
ollama-rs = { version = "0.2", features = ["stream"] }

# Text splitting
text-splitter = { version = "0.16", features = ["markdown"] }

# PDF extraction
pdf-extract = "0.7"

# Progress bar
indicatif = "0.17"

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP client (for health checks)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"

# Regex for text cleaning
regex = "1"

# Async streaming
tokio-stream = "0.1"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
