[package]
name = "ghost-lib"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Ghost Librarian — ultra-lightweight local-LLM RAG engine with Context Distillation"
license = "MIT"
repository = "https://github.com/yu010101/ghost-librarian"
homepage = "https://github.com/yu010101/ghost-librarian"
readme = "README.md"
keywords = ["rag", "llm", "embeddings", "search", "ollama"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "ghost-lib"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local embeddings
fastembed = "4"

# Local LLM
ollama-rs = { version = "0.2", features = ["stream"] }

# Text splitting
text-splitter = { version = "0.16", features = ["markdown"] }

# PDF extraction
pdf-extract = "0.7"

# Progress bar
indicatif = "0.17"

# UUID
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"

# Regex for text cleaning
regex = "1"

# Async streaming
tokio-stream = "0.1"
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Parallel vector search
rayon = "1"

[dev-dependencies]
regex = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
